# obstreamntp-server

./: .gitignore  CMakeLists.txt  Makefile  ObStreamNtp.c  OrbStreamNtp.c  OrbStreamNtp.h  demo.c  orb_stream_ntp.h  orgin_Makefile  server.c
example/: CMakeLists.txt  Makefile  ObStreamNtpConfig.cmake
include/: ObStreamNtp.h  OrbStreamNtp.h
