cmake_minimum_required (VERSION 2.8)
project (server)
include_directories (./)
include_directories (./include)
set( SRC_LIB ./md5.c ./ObStreamNtp.c)
find_library( zmq-lib zmq)
add_library (obstreamntp SHARED ${SRC_LIB})
#add_library (obstreamntp STATIC ${SRC_LIB})
target_link_libraries (obstreamntp zmq)
set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
