cmake_minimum_required (VERSION 2.8)
project (server)
include_directories (./)
include_directories (./include)
set( SRC_LIB ./md5.c ./ObStreamNtp.c)
find_library( zmq-lib zmq)
add_library (obstreamntp_shared SHARED ${SRC_LIB})
add_library (obstreamntp_static STATIC ${SRC_LIB})
set_target_properties (obstreamntp_shared PROPERTIES OUTPUT_NAME "ObStreamNtp")
set_target_properties (obstreamntp_static PROPERTIES OUTPUT_NAME "ObStreamNtp")
target_link_libraries (obstreamntp_shared zmq)
target_link_libraries (obstreamntp_static zmq)
set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
