cmake_minimum_required (VERSION 2.8)
project (server)
include_directories (../include)
#include_directories (${PROJECT_SOURCE_DIR}/../include)
aux_source_directory (./ DEMO_SRC)
add_executable (server.out ${DEMO_SRC})
#find_library(obstreamntp libobstreamntp.so ${PROJECT_SOURCE_DIR}/lib)
target_link_libraries (server.out obstreamntp)
#set (LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/lib)
#set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/)
