cmake_minimum_required (VERSION 2.8)
project (server)
include_directories (../include)
include_directories (../lib)
aux_source_directory (./ DEMO_SRC)
add_executable (server.out ${DEMO_SRC})
set(ObStreamNtp_DIR "${PROJECT_SOURCE_DIR}")
find_package( ObStreamNtp REQUIRED )
if (NOT ObStreamNtp_FOUND)
    message(FATAL_ERROR "ObStreamNtp Not Found!")
endif (NOT ObStreamNtp_FOUND)
include_directories (${ObStreamNtp_INCLUDE_DIRS})
target_link_libraries (server.out ${ObStreamNtp_LIBRARIES})
#set (EXECUTABLE_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/../bin)
#message(STATUS "PROJECT_SOURCE_DIR:${PROJECT_SOURCE_DIR}")
